# Clever-ISA-Emu

./: .gitignore  .gitmodules  Cargo.toml  build-bios
bootloader/: Makefile  mbr-link.ld
bootloader/mbr/: main.s
bootloader/stage2/: Cargo.toml
bootloader/stage2/.cargo/: config.toml
bootloader/stage2/src/: aci.rs  io.rs  main.rs
bootloader/stage2/targets/: clever-unknown-elf.json
clever-emu/: Cargo.toml
clever-emu-aci/: Cargo.toml
clever-emu-aci/src/: lib.rs  root.rs
clever-emu-cpu/: Cargo.toml
clever-emu-cpu/src/: cpu.rs  exec.rs  executor.rs  interrupt.rs  lib.rs  mem.rs  page.rs
clever-emu-datastructures/: Cargo.toml
clever-emu-datastructures/src/: cache.rs  lib.rs  list.rs
clever-emu-decode/: Cargo.toml
clever-emu-decode/src/: decode.rs  instr.rs  lib.rs  macros.rs  op.rs  ucode.rs
clever-emu-errors/: Cargo.toml
clever-emu-errors/src/: lib.rs
clever-emu-mem/: Cargo.toml
clever-emu-mem/src/: bus.rs  cache.rs  io.rs  lib.rs  phys.rs
clever-emu-primitives/: Cargo.toml
clever-emu-primitives/src/: bitfield.rs  float.rs  lib.rs  primitive.rs
clever-emu-primitives/src/sync/: atomic.rs
clever-emu-regs/: Cargo.toml
clever-emu-regs/src/: cpuid.rs  lib.rs
clever-emu-storage/: Cargo.toml
clever-emu-storage/src/: interface.rs  lib.rs  store.rs
clever-emu-storage/src/interface/: iodma.rs  spi.rs
clever-emu-types/: Cargo.toml
clever-emu-types/src/: lib.rs
clever-emu-wgpu/: Cargo.toml
clever-emu-wgpu/src/: device.rs
clever-emu/src/: emu_state_builder.rs  helpers.rs  main.rs  serial.rs
clever_emu/: Cargo.toml
clever_emu/src/: aci.rs  cpu.rs  lib.rs  main.rs  page.rs
clever_emu/src/cpu/: cpuid.rs  reg.rs  state.rs
machine-folder/: fast-disk-dma.s  serial.s
src/: aci.rs  bitfield.rs  cpu.rs  error.rs  float.rs  io.rs  lib.rs  main.rs  mem.rs  page.rs  primitive.rs  reg.rs  util.rs  wpgu.rs
src/cpu/: reg.rs  ucode.rs
