[package]
name = "clever-emu-decode"
version = "0.1.0"
edition = "2021"

[dependencies]
clever-emu-primitives.workspace = true
clever-emu-regs.workspace = true
clever-emu-types.workspace = true
clever-emu-errors.workspace = true
bytemuck.workspace = true
paste.workspace = true

[features]
float = ["clever-emu-primitives/float", "clever-emu-regs/float"] # X-float
vector = ["clever-emu-regs/vector"] # X-vector
float-ext = ["float", "clever-emu-regs/float-ext"] # X-float-ext
rand = ["clever-emu-regs/rand"] # X-rand
hash-accel = ["clever-emu-regs/hash-accel"] # X-hash-accel
crypto = ["clever-emu-regs/crypto"] # X-crypto