[package]
name = "clever-emu-regs"
version = "0.1.0"
edition = "2021"

[dependencies]
clever-emu-primitives.workspace = true
clever-emu-errors.workspace = true
clever-emu-types.workspace = true
bytemuck.workspace = true

[features]
float = ["clever-emu-primitives/float", "clever-emu-errors/float"] # X-float
vector = [] # X-vector
float-ext = ["float"] # X-float-ext
rand = [] # X-rand
hash-accel = [] # X-hash-accel
