[package]
name = "clever-isa-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
float = [] # X-float
vector = [] # X-vector
float-ext = ["float"] # X-float-ext
rand = [] # X-rand
aci = ["dep:aci-firmware-hal"]
wpgu = ["dep:wgpu", "dep:winit", "aci"]
'clever1.0' = ["float", "vector", "float-ext"]
hash-accel = []

[dependencies]
clever-emu-primitives.workspace=true
fake-enum = "0.1.2"
num-traits = "0.2.14"
wgpu = {version="0.19.1", optional=true}
winit = {version="0.29.10", optional=true}
lccc-siphash = "0.1"
sptr = "0.2.2"
aci-firmware-hal = {workspace=true, optional=true}